Now you can apply for the school you like from both the whole section view, or the filtered version of it when you complete a relocation form.

--- a/Relocation and booking services/Views/Home/AboutUs.cshtml
+++ b/Relocation and booking services/Views/Home/AboutUs.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="servicesCarousel" class="carousel slide w-75 p-5" data-bs-ride="carousel">
+﻿<div id="servicesCarousel" class="carousel slide w-75 rounded mx-auto d-block p-5" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="https://as1.ftcdn.net/v2/jpg/01/38/73/66/1000_F_138736612_9xfKDKq5kh6zmw9EJZjluslMP7Uzbxda.jpg" class="d-block w-100" />
