--- a/Relocation and booking services/Views/Shared/_Layout.cshtml
+++ b/Relocation and booking services/Views/Shared/_Layout.cshtml
@@ -56,6 +56,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-white" asp-controller="Home" asp-action="AllSchools">
+                        School services
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-white" asp-controller="Home" asp-action="AboutUs">About Us</a>
                 </li>
                 <li class="nav-item">
