--- a/Relocation and booking services/Views/User/Relocation.cshtml
+++ b/Relocation and booking services/Views/User/Relocation.cshtml
@@ -82,7 +82,7 @@
                     <div class="row">
                         <legend class="form-control">Your child needs to go to school there?</legend>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" id="child" name="child" />
+                            <input class="form-check-input" value="6" type="radio" id="child" name="child" />
                             <label class="form-check-label" for="child">Yes</label>
                         </div>
                         <div class="form-check form-check-inline">
