--- a/Relocation and booking services/Views/Shared/BookingServices.cshtml
+++ b/Relocation and booking services/Views/Shared/BookingServices.cshtml
@@ -8,10 +8,6 @@
                 <img src="@(ap.Image!=null ? "data:image/jpg;base64,"+Convert.ToBase64String(ap.Image): ap.ImageSrc)" class="card-img-top" />
                 <div class="card-body">
                     <h4 class="card-title">@ap.Name</h4>
-                    @*
-                    <input class="form-control" type="text" value="@ap.CreatorId" name="apartmentCreatorId"hidden />
-                    <input class="form-control" type="text" value="@ap.Id" name="apartmentId"hidden />
-                *@
                     <p class="card-text">@ap.Description</p>
                     <p class="card-text">Company: @ap.CompanyName</p>
                     <div class="card-footer">
@@ -20,6 +16,11 @@
                     </div>
                 </div>
                 <div class="card-footer">
+                    <blockquote class="blockquote">
+                        Posted on: @ap.Date?.ToString("dd/MM/yyyy");
+                        <br />
+                        At @ap.Date?.ToString("hh/mm/ss");
+                    </blockquote>
                     <button class="btn btn-primary" type="button" onclick="MakeInputCommand('@ap.Id',document.getElementById('bookingForm'),'@ap.CreatorId')">Reserve</button>
                 </div>
             </div>
