--- a/Relocation and booking services/Views/IndustryUser/PersonalServiceList.cshtml
+++ b/Relocation and booking services/Views/IndustryUser/PersonalServiceList.cshtml
@@ -8,7 +8,7 @@
         @foreach (AbstractModel? item in Model)
         {
             <div class="card">
-                <img src="@(item.Image !=null ? "data:image/jpg;base64,"+Convert.ToBase64String(item.Image) : item.ImageSrc)" class="card-img-top" />
+                <img src="@("data:image/jpg;base64,"+Convert.ToBase64String(item.Image))" class="card-img-top" />
                 <div class="card-body">
                     <input class="form-control" type="text" value="@item.CreatorId" name="itemCreatorId" hidden />
                     <input class="form-control" type="text" value="@item.Id" name="itemId" hidden />
