--- a/Relocation and booking services/Views/Shared/AllSchools.cshtml
+++ b/Relocation and booking services/Views/Shared/AllSchools.cshtml
@@ -6,7 +6,7 @@
         @foreach (School? ap in Model)
         {
             <div class="card">
-                <img src="@(ap.Image!=null ? "data:image/jpg;base64,"+Convert.ToBase64String(ap.Image): ap.ImageSrc)" class="card-img-top" />
+                <img src="@("data:image/jpg;base64,"+Convert.ToBase64String(ap.Image))" class="card-img-top" />
                 <div class="card-body">
                     <h4 class="card-title">@ap.Name</h4>
                     <p class="card-text">@ap.Description</p>
