Made the database use foreign keys so that all the data about a user is deleted when a user is deletes his acccount. Also, made some fixes here and there

--- a/Relocation and booking services/Views/Shared/AllSchools.cshtml
+++ b/Relocation and booking services/Views/Shared/AllSchools.cshtml
@@ -20,7 +20,7 @@
                     @Html.AntiForgeryToken();
                     <h4 class="card-title">@ap.Name</h4>
                     <p class="card-text">@ap.Description</p>
-                    <p class="card-text">School Type: @(Model.Item2.First(item => item.UserId==ap.CreatorId).SchoolType)</p>
+                    <p class="card-text">School Type: @(Model.Item2.FirstOrDefault(item => item.UserId==ap.CreatorId).SchoolType)</p>
                     <div class="card-footer">
                         <a class="card-text" href="@ap.Link" target="_blank">Visit</a> 
                     </div>
