Added notifications for each action within the platform, added an enum for it with 2 message types (good and bad), fixed possible error, like going to places where you shouldn't when logged off and getting a notification for it, or just simply not letting you add whatever you want. Also, now you can see how many unopened emails you have now.

--- a/Relocation and booking services/Views/Email/Email.cshtml
+++ b/Relocation and booking services/Views/Email/Email.cshtml
@@ -12,9 +12,7 @@
         </div>
         <div class="card-footer">
             <blockquote class="blockquote">
-                Posted at @Model.Item1.Date?.ToString("dd/MM/yyyy");
-                <br />
-                At @Model.Item1.Date?.ToString("hh/mm/ss");
+                Posted at @Model.Item1.Date?.ToString("dd.MM.yyyy HH:mm");
             </blockquote>
             <button type="button" id="replyButton" class="btn btn-outline-primary" onclick="openReply()">Reply</button>
             <button type="button" class="btn btn-outline-warning" id="forwardButton" onclick="openForward()">Forward</button>
