--- a/Relocation and booking services/Views/Shared/_Layout.cshtml
+++ b/Relocation and booking services/Views/Shared/_Layout.cshtml
@@ -64,7 +64,11 @@
                     <a class="nav-link text-white" asp-controller="Home" asp-action="AboutUs">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" asp-controller="Email" asp-action="Emails">Emails</a>
+                    <a class="nav-link text-white" asp-controller="Email" asp-action="Emails">
+                        Emails
+                        <span class="position-absolute top-1 start-99 translate-middle badge rounded-pill bg-danger" id="userNewEmailNumber">
+                        </span>
+                    </a>
                 </li>
                 <li class="nav-item " id="relocation">
                     <a class="nav-link text-white" asp-controller="User" asp-action="Relocation">Relocation</a>
@@ -83,6 +87,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" asp-controller="Email" asp-action="Emails">Emails</a>
+                    <span class="position-absolute top-1 start-99 translate-middle badge rounded-pill bg-danger" id="industryUserNewEmailNumber">
+
+                    </span>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" asp-controller="Home" asp-action="AboutUs">About Us</a>
@@ -99,7 +106,14 @@
                     <a class="nav-link text-white" asp-controller="School" asp-action="SchoolServices">Your school servicess</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" asp-controller="Email" asp-action="Emails">Emails</a>
+                    <a class="nav-link text-white" asp-controller="Email" asp-action="Emails">
+                        Emails
+                        <span class="position-absolute top-1 start-99 translate-middle badge rounded-pill bg-danger" id="schoolUserNewEmailNumber">
+
+                        </span>
+                    </a>
+                </li>
+                </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" asp-controller="Home" asp-action="AboutUs">About Us</a>
