--- a/Relocation and booking services/Views/Email/EmailList.cshtml
+++ b/Relocation and booking services/Views/Email/EmailList.cshtml
@@ -1,4 +1,13 @@
-﻿@model List<Email>;
+﻿@model (List<Email>,string?);
+
+@if (Model.Item2 != null)
+{
+    if (Model.Item2.Contains("#"))
+        await Html.RenderPartialAsync("Failed", Model.Item2.Substring(1));
+    else
+        await Html.RenderPartialAsync("Success", Model.Item2);
+}
+
 <div class="hstack">
     <div class="d-flex justify-content-left">
         <a class="btn btn-dark" role="button" href="/Email/CreateEmailView">Compose Email</a>
@@ -20,7 +29,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (Email mail in Model)
+                @foreach (Email mail in Model.Item1)
                 {
                     <tr name="chosenEmail" value="@mail.Id">
                         <td><object class="image/svg+xml" data="/mail.svg"></object></td>
