--- a/Relocation and booking services/Views/School/PersonalSchoolList.cshtml
+++ b/Relocation and booking services/Views/School/PersonalSchoolList.cshtml
@@ -1,15 +1,19 @@
-﻿@model List<School>;
+﻿@model (List<School>,string?);
+
+@if(Model.Item2!=null)
+{
+    await Html.RenderPartialAsync("Success", Model.Item2);
+}
 
 <button class="btn btn-primary p-5" type="button" data-bs-toggle="modal" data-bs-target="#addModal">Add Offer</button>
 
 <form id="personalServiceForm" method="post">
     <div class="card-group w-50 h-50 p-5">
-        @foreach (School? item in Model)
+        @foreach (School? item in Model.Item1)
         {
             <div class="card">
                 <img src="@("data:image/jpg;base64,"+Convert.ToBase64String(item.Image))" class="card-img-top" />
                 <div class="card-body">
-                    @Html.AntiForgeryToken();
                     <input class="form-control" type="text" value="@item.CreatorId" name="itemCreatorId" hidden />
                     <input class="form-control" type="text" value="@item.Id" name="itemId" hidden />
                     <h4 class="card-title">@item.Name</h4>
@@ -23,9 +27,7 @@
                     <button class="btn btn-outline-warning" type="button" data-bs-toggle="modal" data-bs-target="#updateModal" onclick="takeIds('@item.Id','@item.CreatorId')">Update</button>
                     <button type="button" class="btn btn-outline-danger" onclick="DeleteOffer('@item.CreatorId','@item.Id','@("/School/DeleteSchoolOffer")')">Delete</button>
                     <blockquote class="blockquote">
-                       Posted on: @item.Date?.ToString("dd/MM/yyyy");
-                       <br />
-                       At @item.Date?.ToString("hh/mm/ss");
+                        Posted at @item.Date?.ToString("dd.MM.yyyy HH:mm");
                     </blockquote>
                 </div>
             </div>
