--- a/Relocation and booking services/Views/Shared/Failed.cshtml
+++ b/Relocation and booking services/Views/Shared/Failed.cshtml
@@ -1,2 +1,8 @@
-﻿@*@model string*@
+﻿@model string;
 
+<div class="container p-5">
+    <div class="alert alert-danger alert-dismissible fade show p-3" role="alert">
+        <p>@Model</p>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+</div>
